Closed Bug 1014103 Opened 10 years ago Closed 10 years ago

Fix XPCShellImpl.cpp!GetLine() to use 4096 byte buffer as its caller

Categories

(Core :: XPConnect, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: mayhemer, Assigned: mayhemer)

Details

Attachments

(1 file)

Attached patch v1Splinter Review
I'm using xpcshell to analyze logs.  I use { var line; while (line = readline()) { }} loop and shell < redirect from a file.  readline tho returns "" after a line with 255 bytes + cr exactly has been hit.  True fix may lie somewhere else, but as a work around at least enlarging the buffer would help me a lot.

ReadLine itself is using 4096 buffer already, but GetLine is on 256 only.
Attachment #8426372 - Flags: review?(bzbarsky)
Comment on attachment 8426372 [details] [diff] [review]
v1

Sure.
Attachment #8426372 - Flags: review?(bzbarsky) → review+
https://hg.mozilla.org/mozilla-central/rev/f4693085c507
Assignee: nobody → honzab.moz
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
I had a fix for this in bug 962208.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: