Bug 1014103 - Fix XPCShellImpl.cpp/GetLine() to use 4096 byte buffer as its caller, r=bz